add api documents done
